my-k8s-app/final/chat_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: default
  labels:
    app: erp-tesseris-chat
spec:
  type: ClusterIP
  selector:
    app: erp-tesseris-chat
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      name: http
    - protocol: TCP
      port: 4001
      targetPort: 4000
      name: websocket
