my-k8s-app/final/chat_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/websocket-services: "chat-service"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kschost.ddns.net
      secretName: notion-proxy-tls
  rules:
    - host: kschost.ddns.net
      http:
        paths:
          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 4000
          - path: /chat/websocket
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 4001
